# Polygeist

./: .clangd  .gitignore  CMakeLists.txt  Formatters.py  usefulcmd.sh
include/polygeist/: CMakeLists.txt  TaskflowDialect.h  TaskflowDialect.td  TaskflowOps.h  TaskflowOps.td  TaskflowTypes.h  TaskflowTypes.td
lib/polygeist/: CMakeLists.txt  TaskflowDialect.cpp  TaskflowOps.cpp
test/Taskflow/: before_optimization.mlir  taskflow-template.mlir  taskflow.mlir
tools/: CMakeLists.txt
tools/cgeist/: CMakeLists.txt  driver.cc
tools/cgeist/Lib/: CGCall.cc  clang-mlir.cc  clang-mlir.h
tools/polygeist-opt/: polygeist-opt.cpp
tools/taskflow-lsp/: CMakeLists.txt  taskflow-lsp-server.cpp
tools/taskflow-opt/: CMakeLists.txt  taskflow-opt.cpp
